[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lightscan"
version = "2.0.0"
description = "Autonomous red-team reconnaissance and attack framework"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Light", email = "ne0k1r4@proton.me" }]
requires-python = ">=3.10"
keywords = ["security", "pentest", "red-team", "scanner", "recon", "ctf"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
]
dependencies = []  # zero hard deps — pure stdlib core

[project.optional-dependencies]
full = [
    "paramiko==3.4.0",
    "pymysql==1.1.1",
    "psycopg2-binary==2.9.9",
    "impacket==0.12.0",
    "ldap3==2.9.1",
    "pycryptodome==3.20.0",
    "pymssql==2.3.0",
    "scapy==2.5.0",
    "aiohttp==3.9.5",
    "PyYAML==6.0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/ne0k1r4/LightScan"
Repository = "https://github.com/ne0k1r4/LightScan"
Issues = "https://github.com/ne0k1r4/LightScan/issues"

[project.scripts]
lightscan = "lightscan.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lightscan*"]

[tool.setuptools.package-data]
lightscan = ["templates/**/*.yaml", "data/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]
